Errors
<kernel>:1495:1: warning: control may reach end of non-void function
}
^
<kernel>:1533:1: warning: control may reach end of non-void function
}
^
<kernel>:2209:1: warning: control may reach end of non-void function
}
^
<kernel>:2262:1: warning: control may reach end of non-void function
}
^
<kernel>:2275:1: warning: control may reach end of non-void function
}
^
<kernel>:2361:1: warning: control reaches end of non-void function
}
^
<kernel>:2609:1: warning: control reaches end of non-void function
}
^
<kernel>:2689:1: warning: control may reach end of non-void function
}
^
<kernel>:2991:1: warning: control reaches end of non-void function
}
^
<kernel>:3768:24: error: expected ')'
                                                &f, &pdf, state) false)
                                                                 ^
<kernel>:3767:7: note: to match this '('
                        if (scatter2(scene.instance_manager.tex_mngr, material, &shade_rec,
                           ^

